[package]
name = "corewa_rs"
version = "0.1.0"
authors = ["Ian Chamberlain <ian.h.chamberlain@gmail.com>"]
edition = "2018"

[dependencies]
itertools = "0.8.0"
lazy_static = "1.2.0"
pest_derive = "2.1.0"
pest = "2.1.0"
structopt = "0.3.5"

[dev-dependencies]
assert_cmd = "0.11.1"
assert_fs = "0.13.1"
predicates = "1.0.2"
testutils = { path = "testutils" }
