[package]
name = "corewa_rs"
version = "0.1.0"
authors = ["Ian Chamberlain <ian.h.chamberlain@gmail.com>"]
edition = "2018"

[dependencies]
err-derive = "0.2.4"
itertools = "0.8.0"
lazy_static = "1.2.0"
pest = "2.1.0"
pest_derive = "2.1.0"
regex = "1.3.9"
structopt = "0.3.5"

[dev-dependencies]
assert_cmd = "0.11.1"
assert_that = "0.1.2"
assert_fs = "0.13.1"
assert_that = "0.1.2"
maplit = "1.0.2"
predicates = "1.0.2"
predicates-tree = "1.0.0"
textwrap = "0.11.0"
textwrap-macros = "0.2.2"
test-case = "1.0.0"
