[package]
name = "corewars-core"
version = "0.2.0"
authors = ["Ian Chamberlain <ian@corewa.rs>"]
categories = ["games", "emulators", "parser-implementations"]
edition = "2018"
homepage = "https://corewa.rs/"
keywords = ["corewars", "core", "war", "wars", "redcode"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/corewa-rs/corewars"
description = "Data structures and common utilities for the corewars crate"

[dependencies]
itertools = "0.9.0"
lazy_static = "1.4.0"
