[package]
name = "corewars-parser"
version = "0.2.0"
authors = ["Ian Chamberlain <ian@corewa.rs>"]
categories = ["games", "emulators", "parser-implementations"]
edition = "2018"
homepage = "https://corewa.rs/"
keywords = ["corewars", "core", "war", "wars", "redcode"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/corewa-rs/corewars"
description = "A placeholder subcrate for corewars"

[dependencies]
corewars-core = { path = "../corewars-core", version = "=0.2.0" }
pest = "2.6.0"
pest_derive = "2.6.0"
thiserror = "1.0.40"

[dev-dependencies]
maplit = "1.0.2"
normalize-line-endings = "0.3.0"
pretty_assertions = "1.3.0"
test-case = "3.1.0"
test-generator = "0.3.0"
textwrap = "0.16.0"
textwrap-macros = "0.3.0"
