[package]
name = "corewars-sim"
version = "0.2.0"
authors = ["Ian Chamberlain <ian@corewa.rs>"]
categories = ["games", "emulators"]
edition = "2018"
homepage = "https://corewa.rs/"
keywords = ["corewars", "core", "war", "wars", "redcode"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/corewa-rs/corewars"
description = "Simulation library for a Redcode warrior"

[dependencies]
corewars-core = { path = "../corewars-core", version = "0.2.0" }
thiserror = "1.0.21"

[dev-dependencies]
pretty_assertions = "0.6.1"
test-case = "1.0.0"
