[package]
name = "corewars-sim"
version = "0.2.0"
authors = ["Ian Chamberlain <ian@corewa.rs>"]
categories = ["games", "emulators"]
edition = "2018"
homepage = "https://corewa.rs/"
keywords = ["corewars", "core", "war", "wars", "redcode"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/corewa-rs/corewars"
description = "Simulation library for a Redcode warrior"

[dependencies]
corewars-core = { path = "../corewars-core", version = "0.2.0" }
thiserror = "1.0.44"

[dev-dependencies]
corewars-parser = { path = "../corewars-parser", version = "0.2.0" }
normalize-line-endings = "0.3.0"
pretty_assertions = "1.4.0"
test-case = "3.1.0"
test-generator = "0.3.1"
