[package]
name = "corewars"
version = "0.2.0"
authors = ["Ian Chamberlain <ian@corewa.rs>"]
categories = ["command-line-utilities", "games", "emulators"]
edition = "2018"
homepage = "https://corewa.rs/"
keywords = ["corewars", "core", "war", "wars", "redcode"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/corewa-rs/corewars"
description = "The classic programming battle game Core Wars"

[dependencies]
corewars-parser = { path = "../corewars-parser", version = "=0.2.0" }
corewars-sim = { path = "../corewars-sim", version = "=0.2.0" }
lazy_static = "1.4.0"
structopt = "0.3.5"

[dev-dependencies]
assert_cmd = "0.11.1"
assert_fs = "1.0.7"
normalize-line-endings = "0.3.0"
predicates = "2.1.1"
pretty_assertions = "1.3.0"
test-case = "3.1.0"
test-generator = "0.3.0"
